[GHO-176] Ensure the border between the acknowledgments and partners bleed to the edges

--- a/html/themes/custom/common_design_subtheme/sass/cd/cd-footer/_cd-soft-footer.scss
+++ b/html/themes/custom/common_design_subtheme/sass/cd/cd-footer/_cd-soft-footer.scss
@@ -89,18 +89,11 @@
   &::after {
     content: '';
     position: absolute;
-    width: calc(100vw + 48px);
+    left: -50%;
+    right: -50%;
     height: 1px;
     background: $implementation-primary;
     bottom: 0;
-
-    html[dir='ltr'] & {
-      left: -24px;
-    }
-
-    html[dir='rtl'] & {
-      right: -24px;
-    }
   }
 
   img {
